--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "request": "^2.88.2",
-    "tiktok-scraper": "^1.4.4"
+    "tiktok-scraper": "^1.4.4",
+    "yt-search": "^2.13.1"
   }
 }
